<?xml version="1.0" encoding="utf-8"?>
<com.alperez.library.widget.SlidingViewFlipper android:id="@+id/flipper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_darker"
    app:incrementInAnimation="@anim/fly_from_right"
    app:incrementOutAnimation="@anim/fly_to_left"
    app:decrementInAnimation="@anim/fly_from_left"
    app:decrementOutAnimation="@anim/fly_to_right">

    <!--  Page 1 - main Editor  -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background_darker">
            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:padding="4dp"
                android:background="@drawable/bg_white_circle">
                <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/ic_driver_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/test_girl"/>
            </FrameLayout>

            <TextView android:id="@+id/txt_driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:gravity="center_horizontal"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/text_dark"
                tools:text="Idfgujhdf sdjkfhsd kfsdkl"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/text_light_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:textColor="@color/text_dark"
                    android:letterSpacing="0.15"
                    android:text="@string/collected_items" />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView android:id="@+id/action_collect_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/text_link"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:drawableTint="@color/text_link"
                    android:text="@string/action_collect_more"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/collected_goods_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <!--  Customer name/signature section  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="24dp"
                android:background="@color/text_light_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:textColor="@color/text_dark"
                    android:letterSpacing="0.15"
                    android:text="@string/label_customer"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/base_margin">

                    <TextView android:id="@+id/txt_customer_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="left|top"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/text_dark"
                        tools:text="Idfgujhdf sdjkfhsd kfsdkl sdifghsdf sdghofudh sfohasdfo hasdof" />

                    <TextView android:id="@+id/action_fill_in_customer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:gravity="center_vertical"
                        android:textSize="15sp"
                        android:textColor="@color/text_link"
                        android:drawableRight="@drawable/ic_arrow_right"
                        android:drawableTint="@color/text_link"
                        android:text="@string/action_fill_in"/>
                </FrameLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">
                <com.alperez.library.widget.StableAspectFrameLayout android:id="@+id/signature_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="56dp"
                    android:layout_marginRight="56dp"
                    app:ref_side="width"
                    app:aspect_width="7"
                    app:aspect_height="4"
                    android:background="@color/default_background">

                    <com.alperez.library.widget.SignatureView android:id="@+id/signature_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:signColor="@color/text_link"
                        app:signStrokeWidth="2dp" />

                    <TextView android:id="@+id/hint_tap_to_sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#90F4595A"
                        android:text="@string/txt_hint_tap_to_sign"/>

                </com.alperez.library.widget.StableAspectFrameLayout>


                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="top|right">
                    <ImageView android:id="@+id/action_clear_signature"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:scaleType="center"
                        android:src="@drawable/ic_clear_18dp"
                        android:tint="@color/text_gray"
                        android:background="?android:selectableItemBackgroundBorderless"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right|center_vertical">
                    <ImageView android:id="@+id/action_change_signature"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:scaleType="center"
                        android:src="@drawable/ic_arrow_right"
                        android:tint="@color/text_link"
                        android:background="?android:selectableItemBackgroundBorderless"/>
                </FrameLayout>

            </FrameLayout>

            <TextView android:id="@+id/action_clear_all"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="48dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textColor="@color/text_white"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="Clear all"
                android:clickable="true"
                android:background="@drawable/bg_btn_start_visit"/>

        </LinearLayout>
    </ScrollView>

    <!--  Page 2 - Select new item  -->
    <com.alperez.samples.collectgoods.widget.SelectGoodItemView android:id="@+id/good_item_selector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background"/>

    <!--  Page 3 - Sign from customer  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/background_darker" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/text_gray"
            android:text="@string/customer_name"/>

        <EditText android:id="@+id/edt_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="12sp"
            android:textColor="@color/text_gray"
            android:text="@string/customer_signature"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <com.alperez.library.widget.StableAspectFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="48dp"
                app:ref_side="width"
                app:aspect_width="7"
                app:aspect_height="4"
                android:background="@color/default_background">
                <TextView android:id="@+id/txt_hint_sign_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#90F4595A"
                    android:text="@string/txt_hint_sign_here"/>
                <com.alperez.library.widget.SignatureEditorView android:id="@+id/signature_editor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:signColor="@color/text_link"
                    app:signStrokeWidth="2dp" />
            </com.alperez.library.widget.StableAspectFrameLayout>

            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="top|right">
                <ImageView android:id="@+id/action_clear_signature_editor"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:scaleType="center"
                    android:src="@drawable/ic_clear_18dp"
                    android:tint="@color/text_gray"
                    android:background="?android:selectableItemBackgroundBorderless"/>
            </FrameLayout>

            <TextView android:id="@+id/txt_num_sign_tracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="20dp"
                tools:text="3"/>

            <FrameLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom|right">
                <ImageView android:id="@+id/action_apply_signature"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_done_white_48dp"
                    android:tint="@color/app_color_green"
                    android:background="?android:selectableItemBackgroundBorderless"/>
            </FrameLayout>
        </FrameLayout>

        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/action_apply_signature"/>
    </LinearLayout>

</com.alperez.library.widget.SlidingViewFlipper>